--- a/index.css
+++ b/index.css
@@ -1,9 +1,11 @@
 body{
     background-color: aqua;
+    text-align: center;
 }
 
 h1{
-    color:cornflowerblue;
+    color:black;
+    font-size: 100px;
 }
 .form,
 .greetings{
